<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_prog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_brown"
        android:elevation="11dp"
        android:fontFamily="@font/bebas"
        android:gravity="center"
        android:text="Loading...\nPlease Wait...\n\nFood Funky App"
        android:textColor="@color/creme"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/creme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/creme">

            <TextView
                android:id="@+id/signup_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/quicksand_book"
                android:text="@string/signup"
                android:textColor="@color/dark_brown"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_txt1"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bebas"
                android:text="@string/credentials"
                android:textColor="@color/dark_brown"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/signup_txt2"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_et"
                android:drawableStart="@drawable/ic_name"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="15dp"
                android:fontFamily="@font/quicksand_book"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColor="@color/creme"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_brown" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/signup_name"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_et"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:fontFamily="@font/quicksand_book"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/creme"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_brown" />

            <EditText
                android:id="@+id/signup_phno"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/signup_email"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_et"
                android:drawableStart="@drawable/ic_phone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="15dp"
                android:fontFamily="@font/quicksand_book"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:textColor="@color/creme"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_brown" />

            <EditText
                android:id="@+id/signup_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/signup_phno"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_et"
                android:drawableStart="@drawable/ic_address"
                android:drawableLeft="@drawable/ic_address"
                android:drawablePadding="15dp"
                android:fontFamily="@font/quicksand_book"
                android:hint="@string/address"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textColor="@color/creme"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_brown" />

            <EditText
                android:id="@+id/signup_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/signup_address"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_et"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="15dp"
                android:fontFamily="@font/quicksand_book"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColor="@color/creme"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_brown" />

            <EditText
                android:id="@+id/signup_con_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/signup_pass"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bg_et"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="15dp"
                android:fontFamily="@font/quicksand_book"
                android:hint="@string/con"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColor="@color/creme"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_brown" />

            <Button
                android:id="@+id/signup_sgn_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/signup_con_pass"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="300dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/quicksand_book"
                android:text="@string/signup"
                android:textColor="@color/creme"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/dark_brown" />

            <TextView
                android:id="@+id/bottom_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_sgn_btn"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/quicksand_book"
                android:gravity="center"
                android:text="@string/bfbp"
                android:textColor="@color/dark_brown"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </ScrollView>
</RelativeLayout>



